--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
         <meta name ="Description" content ="Jeu du pendu"> 
         <meta http-equiv="X-UA-Compatible" content = "ie=edge">
-        <link rel="stylesheet" href="/style.css" type="text/css">
+        <link rel="stylesheet" href="assets/style.css" type="text/css">
         <title>Le pendu</title>
         
         
